queXS 1.7.6 - Changes since 1.7.5

Fixed Bug: Define operator skills as for the assigning of cases to operators
Fixed Bug: Define availability group as for respondent
Fixed Bug: Add description of shift defining process and label year and week of year
Fixed Bug: Add message about missing sample if sample not assigned 
Fixed Bug: Don't display overall stats unless explicitly selected
New Feature: Search for cases that have been assigned but not completed in more than 24 hours and put them back in the pool
New Feature: Allow for editing of assigned sample details
New Feature: Assign appointments in order of closest ending time
New Feature: Added IS_INTERVIEWER token so can check if the questionnaire is administered by an interviewer by the following Lime Expression Manager code: {if(IS_INTERVIEWER,'This is an interviewer','THIS IS NOT AN INTERVIEWER')}
Fixed Bug: Set default template if token specified but no equivalent token in queXS (i.e. when using limesurvey within queXS standalone)
Translations: Added Persian language and updated translations from Launchpad - thank you

queXS 1.7.5 - Changes since 1.7.4

Fixed Bug: Set default supervisor extension to be 1000
Fixed Bug: Add quota updates to system sort process to keep additive quotas up to date
Fixed Bug: Previews in Limesurvey should be as an interviewer
Fixed Bug: Reset page position when respondent is to self complete in a different mode
Fixed Bug: Only apply automatic text focus when working as an interviewer (otherwise may jump to strange part of page)
Fixed Bug: Updated error message when adding operator if extension is the same
Fixed Bug: Make sure cases are only generated for enabled questionnaires
Fixed Bug: Email charset wasn't UTF8
New Feature: Display if assigned questionnaires are enabled or not
Translations: Updated translations (thank you again to all the translators)

queXS 1.7.4 - Changes since 1.7.3

Fixed Bug: Only auto advance in the questionnaire if an interviewer (not when self completing)